[gd_scene load_steps=3 format=3 uid="uid://ciwadge2vc8xo"]

[ext_resource type="Theme" uid="uid://b64ur4t0q0jgs" path="res://ui/theme_default/default_theme.tres" id="1_1fufa"]
[ext_resource type="Script" path="res://menus/lobby/lobby.gd" id="2_drcks"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1fufa")
script = ExtResource("2_drcks")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -94.0
offset_right = 203.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LOBBY"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "NAME"
horizontal_alignment = 2
vertical_alignment = 1

[node name="NameTextBox" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
text = "PLAYER"
alignment = 1

[node name="IPLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "IP"
horizontal_alignment = 2
vertical_alignment = 1

[node name="IPTextBox" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
text = "127.0.0.1"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HOST GAME"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "JOIN GAME"

[connection signal="text_changed" from="VBoxContainer/GridContainer/NameTextBox" to="." method="_on_name_text_box_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
